fix search page on mobile (margin) - close #13

--- a/css/search.css
+++ b/css/search.css
@@ -1,10 +1,3 @@
-.searchWrapper > div:first-of-type {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin: 1rem;
-}
-
 .amount {
   position: absolute;
   top: 17%;
@@ -69,6 +62,7 @@
 
 .sortFilterTitle {
   text-align: center;
+  margin-top: 1rem;
 }
 
 @media (width < 800px) {
